fix: buttons bg overflow

--- a/Level-1/styles/style.css
+++ b/Level-1/styles/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 #right-player {
-  background-color: var(--color-7);
+  background-color: var(--color-1);
 }
 
 /* Dice */
@@ -38,63 +38,21 @@ body {
   border-style: outset;
 }
 
-.dice {
-  height: 100%;
-}
-
 .dice-dot {
   width: 12px;
   aspect-ratio: 1;
-  border-radius: 50%;
   background-color: black;
-}
-
-.dice-row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.dice-row-top {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-.dice-row-bot {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-.dice-row-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.dice-row-left {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-
-.dice-row-right {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
 }
 
 .buttons {
   width: 150px;
   height: 50px;
-  bottom: 5%;
 }
 
 .btn {
   color: var(--color-6);
   background-color: var(--color-4);
-  line-height: 3rem;
+  line-height: 50px;
 }
 
 .hold {
@@ -109,7 +67,7 @@ body {
   font-size: 1.5rem;
 }
 
-.live-score {
+.player-live-score {
   border-radius: var(--border-radius-8);
   background-color: var(--color-4);
   text-align: center;
